<resources>
    <string name="app_name">SkoolApp</string>
    <string name="hello_world">Hello world!</string>

    <string name="edit_message">Put text here</string>
    <string name="button_send">Send</string>
    <string name="button_second">Show DB</string>
    <string name="button_third">Search item</string>
    <string name="button_fourth">Subtract</string>
    <string name="button_fifth">Edit</string>
    <string name="button_sixth">AddItem</string>
    <string name="button_seventh">Delete</string>

    <string name="edit_username">Username</string>
    <string name="edit_pw">Password</string>
    <string name="button_login">Login</string>

    <string name="action_refresh">Refresh</string>
    <string name="action_search">Search</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>

    <string name="title_activity_display_second">DisplaySecondAct</string>
    <string name="title_activity_display_third">OpenDB</string>
    <string name="title_activity_display_fourth">Subtract Amount</string>
    <string name="title_activity_display_message">DisplayMessageActivity</string>
    <string name="title_activity_display_fifth">AddItem</string>
    <string name="title_activity_display_sixth">EditItem</string>
</resources>
