<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:columnCount="3"
    android:rowCount="3"
    tools:context=".MainActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:text="@string/button_send"
        android:onClick="sendMessage"
        android:layout_weight="1"
        android:layout_centerHorizontal="true"
        android:layout_column="0"
        android:layout_row="0"
        android:layout_gravity="fill_horizontal"/>

    <EditText
        android:id="@+id/edit_message"
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:hint="@string/edit_message"
        android:layout_weight="1"
        android:layout_centerHorizontal="true"
        android:layout_column="1"
        android:layout_row="0"
        android:layout_columnSpan="2"
        android:layout_gravity="fill_horizontal"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:text="@string/button_second"
        android:onClick="secondActivity"
        android:layout_weight="1"
        android:layout_centerHorizontal="true"
        android:layout_column="0"
        android:layout_row="1"
        android:layout_columnWeight="1"
        android:layout_gravity="fill_horizontal"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:text="@string/button_third"
        android:onClick="thirdActivity"
        android:layout_weight="1"
        android:layout_centerHorizontal="true"
        android:layout_column="1"
        android:layout_row="1"
        android:layout_columnWeight="1"
        android:layout_gravity="fill_horizontal"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:text="@string/button_fourth"
        android:onClick="fourthActivity"
        android:layout_weight="1"
        android:layout_centerHorizontal="true"
        android:layout_column="2"
        android:layout_row="1"
        android:layout_columnWeight="1"
        android:layout_gravity="fill_horizontal"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:text="@string/button_fifth"
        android:onClick="fourthActivity"
        android:layout_weight="1"
        android:layout_centerHorizontal="true"
        android:layout_column="0"
        android:layout_row="2"
        android:layout_gravity="fill_horizontal"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:text="@string/button_fourth"
        android:onClick="thirdActivity"
        android:layout_weight="1"
        android:layout_centerHorizontal="true"
        android:layout_column="1"
        android:layout_row="2"
        android:layout_gravity="fill_horizontal"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:text="@string/button_fourth"
        android:onClick="thirdActivity"
        android:layout_weight="1"
        android:layout_centerHorizontal="true"
        android:layout_column="2"
        android:layout_row="2"
        android:layout_gravity="fill_horizontal"/>

</GridLayout>